// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test-index-of should find a shapefile listed in the index-of 1`] = `
Array [
  Object {
    "archive": true,
    "files": Array [
      "data.shp",
      "data.cpg",
      "data.dbf",
      "data.prj",
      "data.shx",
    ],
    "type": "shp",
  },
  Object {
    "archive": true,
    "files": Array [
      "data2.shp",
      "data2.cpg",
      "data2.dbf",
      "data2.prj",
      "data2.shx",
    ],
    "type": "shp",
  },
  Object {
    "archive": true,
    "files": Array [
      "data1.shp",
      "data1.cpg",
      "data1.dbf",
      "data1.prj",
      "data1.shx",
    ],
    "type": "shp",
  },
  Object {
    "archive": true,
    "files": Array [
      "data2.shp",
      "data2.cpg",
      "data2.dbf",
      "data2.prj",
      "data2.shx",
    ],
    "type": "shp",
  },
  Object {
    "archive": true,
    "files": Array [
      "cool.shp",
      "cool.shx",
      "cool.dbf",
      "cool.prj",
    ],
    "type": "shp",
  },
]
`;

exports[`test-index-of should find a shapefile within the zip file of the index-of 1`] = `
Array [
  Object {
    "archive": true,
    "files": Array [
      "data.shp",
      "data.cpg",
      "data.dbf",
      "data.prj",
      "data.shx",
    ],
    "type": "shp",
  },
  Object {
    "archive": true,
    "files": Array [
      "data2.shp",
      "data2.cpg",
      "data2.dbf",
      "data2.prj",
      "data2.shx",
    ],
    "type": "shp",
  },
]
`;

exports[`test-index-of should find a shapefile within the zip file of the index-of of the index-of 1`] = `
Array [
  Object {
    "archive": true,
    "files": Array [
      "data.shp",
      "data.cpg",
      "data.dbf",
      "data.prj",
      "data.shx",
    ],
    "type": "shp",
  },
  Object {
    "archive": true,
    "files": Array [
      "data2.shp",
      "data2.cpg",
      "data2.dbf",
      "data2.prj",
      "data2.shx",
    ],
    "type": "shp",
  },
  Object {
    "archive": true,
    "files": Array [
      "data1.shp",
      "data1.cpg",
      "data1.dbf",
      "data1.prj",
      "data1.shx",
    ],
    "type": "shp",
  },
  Object {
    "archive": true,
    "files": Array [
      "data2.shp",
      "data2.cpg",
      "data2.dbf",
      "data2.prj",
      "data2.shx",
    ],
    "type": "shp",
  },
]
`;
